the live feed testing

--- a/server/templates/live-feed.html
+++ b/server/templates/live-feed.html
@@ -81,9 +81,10 @@
 
         <div class="feed-container">
             <div class="feed-item">
-                <h3>Camera 1</h3>
-                <iframe src="https://www.example.com/live-feed1" allowfullscreen></iframe>
+                <h3>Live Camera</h3>
+                <img src="/live-camera" alt="Live Camera Feed" style="width:100%; border-radius: 5px;">
             </div>
+            
             <div class="feed-item">
                 <h3>Camera 2</h3>
                 <iframe src="https://www.example.com/live-feed2" allowfullscreen></iframe>
